[gd_scene load_steps=6 format=3 uid="uid://bcegueepscj4j"]

[ext_resource type="Theme" uid="uid://crkw145md0nk" path="res://Themes/NestedUI/PopupUI.tres" id="1_2bqyy"]
[ext_resource type="PackedScene" uid="uid://cl2b2giyrbc0i" path="res://Prefabs/UI/Stats/StatLinePanel.tscn" id="2_8a5kd"]
[ext_resource type="Script" path="res://Scripts/Battle/BattleScene/BattleStatsPanel.gd" id="2_im2eg"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://Themes/titleTextTheme.tres" id="2_oa2h7"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://Themes/rootTheme.tres" id="5_i4t0w"]

[node name="BattleStatsPanel" type="Panel" groups=["BattleStatsPanel"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2bqyy")
script = ExtResource("2_im2eg")

[node name="CombatantName" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 70.0
grow_horizontal = 2
theme = ExtResource("2_oa2h7")
bbcode_enabled = true
text = "[center]Combatant Name Goes Here[/center]"
fit_content = true

[node name="StatLinePanel" parent="." instance=ExtResource("2_8a5kd")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -202.0
offset_right = 280.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
readOnly = true

[node name="StatusEffect" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -583.5
offset_top = -266.0
offset_right = 583.5
offset_bottom = -226.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_i4t0w")
bbcode_enabled = true
text = "[center]Experiencing Overwhelming Exhaustion[/center]"
